--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span class="slash">/</span>
             <a href="">populæreste</a>
         </nav>
-        <button>Tilføj Ny Bolig</button>
+        <button>Tilføj En Bolig</button>
     </header>
     <main>
 
