--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span class="slash">/</span>
             <a href="">populæreste</a>
         </nav>
-        <button>Tilføj En Bolig</button>
+        <button>Tilføj Ny Bolig</button>
     </header>
     <main>
 
