--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Fetching Assignment</title>
@@ -46,4 +48,6 @@
 
     <script src="main.js"></script>
 
-</body></html>
+</body>
+
+</html>
