--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Boliger</h1>
         <nav>
-            <a href="">nyeste</a>
+            <a href="index.html">nyeste</a>
             <span class="slash">/</span>
             <a href="">populæreste</a>
         </nav>
@@ -41,7 +41,7 @@
                     <li><span class="bath"></span><br>Badeværelser</li>
                     <li><span class="sqm"></span><span> m<sup>2</sup></span><br>Kvadratmeter </li>
                 </ul>
-                <button>Se Bolig</button>
+                <a href="singlepage.html?house_id=" class="fullSpecs">Se Bolig</a>
             </div>
         </article>
     </template>
