--- a/singlepage.html
+++ b/singlepage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body id="singlebike">
+<body id="singlehouse">
     <header>
         <h1>Boliger</h1>
         <nav>
@@ -40,8 +40,8 @@
                     <li><span class="bed"></span><br>Senge</li>
                     <li><span class="bath"></span><br>Badeværelser</li>
                     <li><span class="sqm"></span><span> m<sup>2</sup></span><br>Kvadratmeter </li>
-                </ul>
-                <a href="singlepage.html?house_id=" class="fullSpecs">Se Bolig</a>
+                </ul><!--
+                <a href="singlepage.html?house_id=" class="fullSpecs">Se Bolig</a>-->
             </div>
         </article>
     </template>
